# Ida

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  README_DATABASE_SETUP.md  alembic.ini  init_db.py  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: consolidated_schema_final.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  chats.py  collections.py  deps.py  documents.py  user_settings.py  weather.py
backend/app/core/: config.py  constants.py  hardware.py  logger.py  security.py  validation.py
backend/app/domain/: __init__.py
backend/app/domain/models/: __init__.py  chat.py  user.py
backend/app/domain/schemas/: __init__.py  chat.py  collections.py  documents.py  user.py  user_settings.py
backend/app/infra/: __init__.py  chat.py  collection.py  database.py  document.py  redis.py  user.py
backend/app/services/: auth_service.py  chat_service.py  document_processor.py  embedding_service.py  llm_service.py  rag_service.py  service_manager.py  speech_service.py  vector_store_service.py
backend/scripts/: create_fresh_db.py  fix_milvus_schema.py  inspect_milvus_schema.py  install_gpu_deps.py  reset_all_collections.py  test_translation.py
backend/tests/: conftest.py  test_auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/dashboard/: WaterDropCard.tsx
frontend/src/components/documents/: DocumentList.tsx  DocumentUpload.tsx
frontend/src/components/layout/: PageLayout.tsx
frontend/src/components/sidebar/: AISettingsSidebar.tsx  ChatHistorySidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  Typewriter.tsx
frontend/src/components/utils/: shapeGenerators.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Weather.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts  index.ts
mermaid/: architecture.mmd  data-flow.mmd  deployment-architecture.mmd  file-structure.mmd  rag-langchain-architecture.mmd  rag-pipeline.mmd  system-architecture.mmd  workflow-detailed.mmd
(+2 files in other folders)
