[project]
name = "niki"
version = "0.1.0"
description = "RAG"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core Framework
    "fastapi==0.121.2",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.20",
    # Database & ORM
    "sqlalchemy==2.0.44",
    "asyncpg==0.30.0",
    "alembic[tz]==1.17.2",
    "redis==7.0.1",
    # Security
    "python-jose[cryptography]==3.5.0",
    "argon2-cffi==25.1.0",
    # Pydantic
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    # Document Processing
    "pypdf==6.3.0",
    "python-docx==1.2.0",
    "python-magic==0.4.27",
    "aiofiles==25.1.0",
    "unstructured==0.18.20",
    # Speech (High-quality neural TTS)
    "pyttsx3==2.90",
    # "TTS>=0.22.0",  # Coqui TTS - high quality neural voices (removed due to dependency conflicts)
    "edge-tts>=6.1.0",  # Microsoft Edge TTS (natural, free)
    # "piper-tts>=1.2.0",  # Fast neural TTS (removed due to complexity)
    # LangChain Ecosystem
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "langchain-milvus>=0.3.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langchain-ollama>=1.0.0",
    "langchain-huggingface>= 1.1.0",
    # Vector Database & AI
    "pymilvus==2.6.3",
    "openai==2.8.1",
    "ollama==0.6.1",
    "tiktoken==0.12.0",
    "sentence-transformers==5.1.2",
    "torch>=2.0.0",  # For GPU support in embeddings
    "torchvision>=0.15.0",  # GPU-accelerated computer vision
    "torchaudio>=2.0.0",  # GPU-accelerated audio processing
    "scikit-learn>=1.3.0",  # For dimensionality reduction
    # Utilities
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "celery==5.5.3",
    "flower==2.0.1",
    "email-validator==2.3.0",
    # Logging
    "structlog==23.1.0",
    "python-json-logger==2.0.7",
    "watchdog==3.0.0",
    # Test
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",  # For in-memory SQLite async
    "psycopg2-binary>=2.9.11",
    "langgraph>=1.0.4",
    # Translation
    "ctranslate2>=4.6",
    "sentencepiece>=0.2",
    "sacremoses>=0.1",
    "piper-tts>=1.3.0",
    "numpy>=2.2.6",
    "numpy>=2.3"
]

[tool.uv.workspace]
members = [
    "backend",
]
